--- a/SHA_Mvc_Lab01/Views/Rider/Edit.cshtml
+++ b/SHA_Mvc_Lab01/Views/Rider/Edit.cshtml
@@ -1,21 +1,23 @@
-﻿@model MotoGP.ViewModels.Rider.RiderCreateViewModel
+﻿@model MotoGP.ViewModels.Rider.RiderEditViewModel
 @using MvcEnumFlags
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>RiderCreateViewModel</h4>
+        <h4>RiderEditViewModel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
+
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -54,7 +56,7 @@
                 <div class="radio">
                     @Html.RadioButtonFor(model => model.Sex, true)
                     <span>Male</span>
-                 </div>
+                </div>
                 <div class="radio">
                     @Html.RadioButtonFor(model => model.Sex, false)
                     <span>Female</span>
@@ -97,7 +99,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
