--- a/SHA_Mvc_Lab01/Views/Shared/_Layout.cshtml
+++ b/SHA_Mvc_Lab01/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Team", "Index", "Team")</li>
                     <li>@Html.ActionLink("Rider", "Index", "Rider")</li>
+                    <li>@Html.ActionLink("Team_Rider", "Index", "Team_Rider")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
