GroupBy EnumFlags Statistics
相關的工作項目: #8

--- a/SHA_Mvc_Lab01/Views/Home/About.cshtml
+++ b/SHA_Mvc_Lab01/Views/Home/About.cshtml
@@ -1,7 +1,30 @@
-﻿@{
-    ViewBag.Title = "About";
+﻿@model IEnumerable<MotoGP.ViewModels.Home.MotogpGroup>
+@{
+    ViewBag.Title = "About Rider Statistics";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<h2>Rider Statistics</h2>
+
+<table class="table">
+    <tr>
+        <th>
+            Classes
+        </th>
+        <th>
+            Riders
+        </th>
+    </tr>
+
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Classes)
+            </td>
+            <td>
+                @item.RiderCount
+            </td>
+        </tr>
+    }
+</table>
