Export Excel By ClosedXML
相關的工作項目: #12

--- a/SHA_Mvc_Lab01/Views/Team_Rider/Index.cshtml
+++ b/SHA_Mvc_Lab01/Views/Team_Rider/Index.cshtml
@@ -9,7 +9,7 @@
 
 <p>
     @Html.ActionLink("Create New", "Create")
-    @Html.ActionLink("Export Excel", "ExportData")
+    @Html.ActionLink("Export ClosedXML", "Export")
 </p>
 
 @using (Html.BeginForm("ExportData", "Team_Rider", FormMethod.Post, new { enctype = "multipart/form-data" }))
