Team- Import data From Excel
相關的工作項目: #14

--- a/SHA_Mvc_Lab01/Views/Team/Index.cshtml
+++ b/SHA_Mvc_Lab01/Views/Team/Index.cshtml
@@ -67,7 +67,8 @@
     <script type="text/javascript">
         $(document).ready(function () {
             var actionUrls = {
-                Upload: '@Url.Action("Upload", "ZipCode")'
+                Upload: '@Url.Action("Upload", "Team")',
+                Import: '@Url.Action("Import", "Team")',
             };
             project.Team.Initialize(actionUrls);
         });
