--- a/SHA_Mvc_Lab01/Views/Shared/_Layout.cshtml
+++ b/SHA_Mvc_Lab01/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="~/Content/bootstrap-modal-master/css/bootstrap-modal-bs3patch.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap-modal-master/css/bootstrap-modal.css" rel="stylesheet" />  
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -43,6 +45,10 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    <script src="~/Content/bootstrap-modal-master/js/bootstrap-modal.js"></script>
+    <script src="~/Content/bootstrap-modal-master/js/bootstrap-modalmanager.js"></script>
+    <script src="~/Scripts/bootbox.js"></script>
+    <script src="@RouteJs.RouteJsHandler.HandlerUrl"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
