--- a/SHA_Mvc_Lab01/Views/Team_Rider/Index.cshtml
+++ b/SHA_Mvc_Lab01/Views/Team_Rider/Index.cshtml
@@ -19,7 +19,7 @@
 
 <div class="well">
     <button class="btn btn-primary" id="ButtonExport" name="ButtonExport">
-        匯出資料自訂檔名
+        選取欄位匯出資料
     </button>
 </div>
 
