--- a/SHA_Mvc_Lab01/Views/Rider/Index.cshtml
+++ b/SHA_Mvc_Lab01/Views/Rider/Index.cshtml
@@ -9,6 +9,13 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+
+<div class="well">
+    <button class="btn btn-primary" id="ButtonExport" name="ButtonExport">
+        匯出資料
+    </button>
+</div>
+
 <table class="table">
     <tr>
         <th>
@@ -79,3 +86,11 @@
     </tr>
 }
 </table>
+
+<!-- ExportData Dialog -->
+@Html.Partial("_ExportDataDialog")
+<!-- ExportData Dialog -->  
+@section scripts
+{
+    <script src="~/Scripts/Rider-Export.js"></script>
+}
