--- a/SHA_Mvc_Lab01/Views/Rider/_ExportDataDialog.cshtml
+++ b/SHA_Mvc_Lab01/Views/Rider/_ExportDataDialog.cshtml
@@ -1,10 +1,9 @@
-﻿<!-- ExportData Dialog -->
-<div id="ExportDataDialog" class="modal fade" tabindex="-1" data-width="600px" data-height="auto" style="display: none;">
+﻿<div id="ExportDataDialog" class="modal fade" tabindex="-1" data-width="600px" data-height="500px" style="display: none;">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
         <h4 id="ExportDataDialog">匯出資料</h4>
     </div>
-    <div class="modal-body" style="margin-left: 5px;">
+    <div class="modal-body" style="margin-left: 5px">
         <div class="row">
             <div class="form-group">
                 <div class="col-lg-12">
@@ -22,7 +21,7 @@
                             <span class="glyphicon glyphicon-ok-sign"></span> 選取全部欄位
                         </a>
                         <a id="UnselectAllColumns" style="cursor: pointer;">
-                            <span class=" glyphicon glyphicon-remove-sign"></span> 不選取全部欄位
+                            <span class="glyphicon glyphicon-remove-sign"></span> 不選取全部欄位
                         </a> )
                     </label>
                 </div>
@@ -49,4 +48,3 @@
         <button id="ButtonCancel" class="btn" data-dismiss="modal" aria-hidden="true">取消</button>
     </div>
 </div>
-<!-- ExportData Dialog -->
